--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -459,7 +459,9 @@ sera d'une part nécessaire à la bonne exécution du script (le lien hypertexte
 
 
 %À mettre à l'endroit encodage
-\label{encW} Les expressions devant figurer dans ces index seront encodées en tant que <w/>, "\textit{word}" et  si ces éléments sont pour l'instant munis d'attributs @type dont les valeurs "0" ou "1" oriente grâce à la transformation XSL (voir~: \ref{ref:xsl_gen}), le mot vers l'index des concepts adverses ou des expressions privilégiées, respectivement~; la version finale verra l'attribut @type remonter sur un élément <ab/>, \textit{arbitrary segment}, qui englobera l'expression et son contexte. Au sein de son contexte, l'expression sera mise en valeur afin d'être clairement visible.
+\label{encW} Les expressions devant figurer dans ces index seront encodées en tant que <term/>, "terme (considéré technique)" et  si ces éléments sont pour l'instant munis d'attributs @type dont les valeurs "0" ou "1" oriente grâce à la transformation XSL (voir~: \ref{ref:xsl_gen}), le mot vers l'index des concepts adverses ou des expressions privilégiées, respectivement~; la version finale verra l'attribut @type remonter sur un élément <span/>, "morceau du texte lié à une interprétation", qui englobera l'expression et son contexte. Au sein de son contexte, l'expression sera mise en valeur afin d'être clairement visible.
+
+Dans une version précédente soumise à évaluation nous nous proposions d'encoder ces éléments avec le couple <w/> "\textit{word}" et <ab/> "\textit{arbitrary segment}". Cette solution a finalement était rejeté car elle n'était pas valide en xml-tei. Aussi nous sommes-nous orientés vers des éléments plus spécifiques~: employant des chercher/remplacer pour remplacer tous les élémnents <w/> déjà placé en élément <term/>
 
 \section{Vers l'édition numérique : transformation XSL}
 \label{ref:xsl_gen}
